# apertium-tur-kir

./: .gitattributes  .gitignore  AUTHORS  Makefile  Makefile.am  README  apertium-tr-ky.ky.lexc  apertium-tr-ky.ky.twol  apertium-tr-ky.tr-ky.dix  apertium-tr-ky.tr-ky.rlx  apertium-tr-ky.tr-ky.t1x  apertium-tur-kir.kir-tur.t1x  apertium-tur-kir.kir.lexc  apertium-tur-kir.kir.twol  apertium-tur-kir.tur-kir.dix  apertium-tur-kir.tur-kir.lrx  apertium-tur-kir.tur-kir.t0x  apertium-tur-kir.tur-kir.t1x  apertium-tur-kir.tur-kir.t2x  apertium-tur-kir.tur-kir.t3x  apertium-tur-kir.tur-kir.t5x  apertium-tur-kir.tur-kir.t6x  apertium-tur-kir.tur.lexc  configure.ac  modes.xml  scraped2html.py  tr-ky.sh  update-morphs.bash  update-trmorph.py  wiki-tests.sh
corpus/: tur-kir-nova.txt  tur-kir-origina.txt
dev/: Pending_tests.html  Regression_tests.html  bilingual-summary.txt  category-consistency.py  checkkir.sh  generation-summary.tr-ky.txt  generation-test.tr-ky.sh  kirmonofy.py  ky-nouns.txt  kyscraper.py  missing-bidix-freq.sh  monofy.py  oguz_2019_kirgiz_1_eval.txt  scraper.py  scraperclasses.py  verb-patterns.txt
dev/bidix/: context_nouns.txt  pending_adjectives.txt  pending_adverbs.txt  pending_conjunctions.txt  pending_determiners.txt  pending_nouns.txt  pending_numerals.txt  pending_postpositions.txt  pending_pronouns.txt  pending_proper_nouns.txt  pending_verbs.txt
dev/corpora/: convertcorpus.py  html_parser.py  rssfucker.py  scraped2html.py  scraper.py  scraper_classes.py  scraper_parsers.py  scraperclasses.py  scrapers.py  source.tpl  xml2txt.py
dev/evaluation/: README  setimes.bulgar.ky.txt  setimes.kosova.ky.txt  setimes.kosova_plate.ky.txt  setimes.kosova_plate.txt  wikipedia.kadinlar_askerler.ky.txt  wikipedia.kadinlar_askerler.txt
dev/midterm/: article.ky.txt  article.tr.txt
morph-tr/: Makefile.am
morph-tr/lexicon/: adjectives  adverbs  cnjadv  cnjcoo  cnjsub  det  interjections  nouns  pn_ant  pn_cog  postpositions  pronouns  proper_nouns  toponyms  verbs
morph-tr/phon/: Makefile
stats/: regenerate-stats.sh
test/: kir-tur-pending-chunker-expected.txt  kir-tur-pending-chunker2-expected.txt  kir-tur-pending-disam-expected.txt  kir-tur-pending-generator-expected.txt  kir-tur-pending-input.txt  kir-tur-pending-lex-expected.txt  kir-tur-pending-morph-expected.txt  kir-tur-pending-postgen-expected.txt  kir-tur-pending-postgen-gold.txt  kir-tur-pending-pretransfer-expected.txt  tests.json  tur-kir-pending-biltrans-expected.txt  tur-kir-pending-chunker-expected.txt  tur-kir-pending-chunker2-expected.txt  tur-kir-pending-chunker5-expected.txt  tur-kir-pending-disam-expected.txt  tur-kir-pending-generator-expected.txt  tur-kir-pending-input.txt  tur-kir-pending-interchunk-expected.txt  tur-kir-pending-lex-expected.txt  tur-kir-pending-morph-expected.txt  tur-kir-pending-postchunk-expected.txt  tur-kir-pending-postgen-expected.txt  tur-kir-pending-postgen-gold.txt  tur-kir-pending-pretransfer-expected.txt  tur-kir-regression-biltrans-expected.txt  tur-kir-regression-chunker-expected.txt  tur-kir-regression-chunker2-expected.txt  tur-kir-regression-chunker5-expected.txt  tur-kir-regression-disam-expected.txt  tur-kir-regression-generator-expected.txt  tur-kir-regression-input.txt  tur-kir-regression-interchunk-expected.txt  tur-kir-regression-lex-expected.txt  tur-kir-regression-morph-expected.txt  tur-kir-regression-postchunk-expected.txt  tur-kir-regression-postgen-expected.txt  tur-kir-regression-postgen-gold.txt  tur-kir-regression-pretransfer-expected.txt  tur-kir-transfer-biltrans-expected.txt  (+13 more)
tests/: HfstTester.py  README  ky-adjectives.yaml  ky-causpass.yaml  ky-jnw.yaml  ky-nouns.yaml  ky-pronouns.yaml  ky-verbs.pairtest  ky-verbs.yaml  ky-verbs2.yaml  ky-verbsimp.yaml  run-tests.sh  tur-kir.test
texts/: translate.sh  tur.küçükkuş.orig.txt  tur.küçükkuş.tur-kir-postedited.txt  tur.küçükkuş.tur-kir.txt
